--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 	<link rel="stylesheet" href="CSS/General/animate.css">
 	<link rel="stylesheet" href="CSS/General/bootstrap.min.css">
 	<script src="Scripts/Angualr/angular.min.js"></script>
+	<script src="Scripts/General/bootstrap.min.js"></script>	
 	<link rel="stylesheet" href="CSS/App.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 	<script src="Scripts/Angualr/angular-route.min.js"></script>
 	<script src="controllers/route.js"></script>
 	<script src="controllers/main_controller.js"></script>
 	<link rel="stylesheet" href="CSS/login.css">
-
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
  <body>
  <div id="main_header" class="navbar navbar-inverse">
