share experience view improved

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<li><a href="#" title="">4</a></li>
 		<li><a href="#" title="">5</a></li>
 		<li><a href="#" title="">6</a></li>
-		<li><a href="#" title="">7</a></li>		
+		<li><a href="#" title="">7</a></li>		s
 		</ul>
 		</li>		
 		</ul>
